# message-converter-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
application/: CMakeLists.txt  main.cpp
application/interfaces/: MessageConverter.proto
message/: CMakeLists.txt
message/core/: CMakeLists.txt
message/core/swift-mt/: CMakeLists.txt
message/core/swift-mt/parse/: SwiftMtParser.cpp  SwiftMtParser.h
message/generation/: CMakeLists.txt
message/generation/http-utils/: CMakeLists.txt
message/generation/http-utils/include/http-utils/: HtmlDocument.h  HttpClient.h  config.h
message/generation/http-utils/src/: HtmlDocument.cpp  HttpClient.cpp
message/generation/office-utils/: CMakeLists.txt
message/generation/office-utils/excel/: Sheet.cpp  WorkBook.cpp
message/generation/office-utils/include/: config.h
message/generation/office-utils/include/excel/: Sheet.h  WorkBook.h
message/generation/swift-mt/: CMakeLists.txt  main.cpp
message/generation/swift-mt-definition/: CMakeLists.txt  main.cpp
message/generation/swift-mt-definition/definition/: ComponentFormatParser.cpp  ComponentFormatParser.h  DefinitionParser.cpp  GrammarGenerator.cpp  GrammarGenerator.h  SequenceStack.h  StandardRepository.cpp  StandardRepository.h
message/generation/swift-mt-definition/format/: SwiftMtComponentFormat.g4  SwiftMtComponentFormatBaseListener.cpp  SwiftMtComponentFormatBaseListener.h  SwiftMtComponentFormatLexer.cpp  SwiftMtComponentFormatLexer.h  SwiftMtComponentFormatListener.cpp  SwiftMtComponentFormatListener.h  SwiftMtComponentFormatParser.cpp  SwiftMtComponentFormatParser.h
message/generation/swift-mt-definition/proto/: SwiftMtMessage.proto  SwiftMtMessageDefinition.proto
message/generation/swift-mt-definition/templates/: SwiftMtParser.g4
message/generation/swift-mt-generation/: CMakeLists.txt  grammar_generator.bat
message/generation/swift-mt-generation/helpers/java/: MessageListHelper.java
message/generation/swift-mt-generation/repository/: ISwiftMtParser.h
message/generation/swift-mt-generation/repository/SR2018/definitions/: SwiftMtMsgDef_101.json  SwiftMtMsgDef_102.json  SwiftMtMsgDef_103.json  SwiftMtMsgDef_104.json  SwiftMtMsgDef_105.json  SwiftMtMsgDef_107.json  SwiftMtMsgDef_110.json  SwiftMtMsgDef_111.json  SwiftMtMsgDef_112.json  SwiftMtMsgDef_200.json  SwiftMtMsgDef_201.json  SwiftMtMsgDef_202.json  SwiftMtMsgDef_203.json  SwiftMtMsgDef_204.json  SwiftMtMsgDef_205.json  SwiftMtMsgDef_210.json  SwiftMtMsgDef_300.json  SwiftMtMsgDef_304.json  SwiftMtMsgDef_305.json  SwiftMtMsgDef_306.json  SwiftMtMsgDef_320.json  SwiftMtMsgDef_321.json  SwiftMtMsgDef_330.json  SwiftMtMsgDef_340.json  SwiftMtMsgDef_341.json  SwiftMtMsgDef_350.json  SwiftMtMsgDef_360.json  SwiftMtMsgDef_361.json  SwiftMtMsgDef_362.json  SwiftMtMsgDef_364.json  SwiftMtMsgDef_365.json  SwiftMtMsgDef_370.json  SwiftMtMsgDef_380.json  SwiftMtMsgDef_381.json  SwiftMtMsgDef_400.json  SwiftMtMsgDef_410.json  SwiftMtMsgDef_412.json  SwiftMtMsgDef_416.json  SwiftMtMsgDef_420.json  SwiftMtMsgDef_422.json  (+115 more)
message/generation/swift-mt-generation/repository/SR2018/grammars/: SwiftMtParser_MT101.g4  SwiftMtParser_MT102.g4  SwiftMtParser_MT103.g4  SwiftMtParser_MT104.g4  SwiftMtParser_MT105.g4  SwiftMtParser_MT107.g4  SwiftMtParser_MT110.g4  SwiftMtParser_MT111.g4  SwiftMtParser_MT112.g4  SwiftMtParser_MT190.g4  SwiftMtParser_MT191.g4  SwiftMtParser_MT192.g4  SwiftMtParser_MT195.g4  SwiftMtParser_MT196.g4  SwiftMtParser_MT198.g4  SwiftMtParser_MT199.g4  SwiftMtParser_MT200.g4  SwiftMtParser_MT201.g4  SwiftMtParser_MT202.g4  SwiftMtParser_MT203.g4  SwiftMtParser_MT204.g4  SwiftMtParser_MT205.g4  SwiftMtParser_MT210.g4  SwiftMtParser_MT290.g4  SwiftMtParser_MT291.g4  SwiftMtParser_MT292.g4  SwiftMtParser_MT295.g4  SwiftMtParser_MT296.g4  SwiftMtParser_MT298.g4  SwiftMtParser_MT299.g4  SwiftMtParser_MT300.g4  SwiftMtParser_MT304.g4  SwiftMtParser_MT305.g4  SwiftMtParser_MT306.g4  SwiftMtParser_MT320.g4  SwiftMtParser_MT321.g4  SwiftMtParser_MT330.g4  SwiftMtParser_MT340.g4  SwiftMtParser_MT341.g4  SwiftMtParser_MT350.g4  (+176 more)
message/generation/swift-mt-generation/repository/SR2018/parsers/: SwiftMtParser_MT101BaseListener.cpp  SwiftMtParser_MT101BaseListener.h  SwiftMtParser_MT101Lexer.cpp  SwiftMtParser_MT101Lexer.h  SwiftMtParser_MT101Listener.cpp  SwiftMtParser_MT101Listener.h  SwiftMtParser_MT101Parser.cpp  SwiftMtParser_MT101Parser.h  SwiftMtParser_MT102BaseListener.cpp  SwiftMtParser_MT102BaseListener.h  SwiftMtParser_MT102Lexer.cpp  SwiftMtParser_MT102Lexer.h  SwiftMtParser_MT102Listener.cpp  SwiftMtParser_MT102Listener.h  SwiftMtParser_MT102Parser.cpp  SwiftMtParser_MT102Parser.h  SwiftMtParser_MT103BaseListener.cpp  SwiftMtParser_MT103BaseListener.h  SwiftMtParser_MT103Lexer.cpp  SwiftMtParser_MT103Lexer.h  SwiftMtParser_MT103Listener.cpp  SwiftMtParser_MT103Listener.h  SwiftMtParser_MT103Parser.cpp  SwiftMtParser_MT103Parser.h  SwiftMtParser_MT104BaseListener.cpp  SwiftMtParser_MT104BaseListener.h  SwiftMtParser_MT104Lexer.cpp  SwiftMtParser_MT104Lexer.h  SwiftMtParser_MT104Listener.cpp  SwiftMtParser_MT104Listener.h  SwiftMtParser_MT104Parser.cpp  SwiftMtParser_MT104Parser.h  SwiftMtParser_MT105BaseListener.cpp  SwiftMtParser_MT105BaseListener.h  SwiftMtParser_MT105Lexer.cpp  SwiftMtParser_MT105Lexer.h  SwiftMtParser_MT105Listener.cpp  SwiftMtParser_MT105Listener.h  SwiftMtParser_MT105Parser.cpp  SwiftMtParser_MT105Parser.h  (+1827 more)
message/generation/swift-mt/definition/: DefinitionParser.cpp  DefinitionParser.h  SequenceStack.cpp  StandardRepository.cpp  StandardRepository.h
message/generation/swift-mt/proto/: SwiftMtMessage.proto  SwiftMtMessageDefinition.proto
message/generation/swift-mt/templates/: SwiftMtParser.g4
proto-helper/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/utils/: Log.h  String.h
utils/src/: Log.cpp  String.cpp
